add .gitignore 优化代码

--- a/file/.gitignore
+++ b/file/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+task_name.json
 # C extensions
 *.so
 
@@ -129,3 +129,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.docx
